@@ -103,7 +103,6 @@ protected:
     static void AddSelcueCheckbox(DialogPage& p, const std::string& prefs_path, bool def_value);
     static void AddGradientCheckbox(DialogPage& p, const std::string& prefs_path, bool def_value);
     static void AddNewObjectsStyle(DialogPage& p, const std::string& prefs_path);
-    static void StyleFromSelectionToTool(gchar const *prefs_path);
 
     void on_pagelist_selection_changed();
     void initPageMouse();
